--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 	"description": "",
 	"devDependencies": {
 		"css-loader": "^7.1.2",
-		"date-fns": "^4.1.0",
 		"html-loader": "^5.1.0",
 		"html-webpack-plugin": "^5.6.0",
 		"style-loader": "^4.0.0",
@@ -22,5 +21,8 @@
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^5.1.0",
 		"webpack-merge": "^6.0.1"
+	},
+	"dependencies": {
+		"date-fns": "^4.1.0"
 	}
 }
